compiler/test/fail/non_lit_enum_member.ts
// Enum members must contain literal values

let foo = 12;

const enum Foo {
  first,
  something = foo,
}
